--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: DCTSearch
+name: dctdomain
 channels:
   - conda-forge
   - bioconda
@@ -7,51 +7,35 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - bzip2=1.0.8=hd590300_5
-  - ca-certificates=2024.2.2=hbcca054_0
-  - faiss=1.7.4=py311h26a440e_0_cpu
-  - ld_impl_linux-64=2.40=hf3520f5_1
-  - libblas=3.9.0=22_linux64_openblas
-  - libcblas=3.9.0=22_linux64_openblas
-  - libexpat=2.6.2=h59595ed_0
-  - libfaiss=1.7.4=hf47d654_0_cpu
-  - libfaiss-avx2=1.7.4=h1234567_0_cpu
+  - ca-certificates=2024.6.2=hbcca054_0
+  - faiss-cpu=1.8.0
+  - ld_impl_linux-64=2.40=hf3520f5_7
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=13.2.0=h77fa898_7
-  - libgfortran-ng=13.2.0=h69a702a_7
-  - libgfortran5=13.2.0=hca663fb_7
-  - libgomp=13.2.0=h77fa898_7
-  - liblapack=3.9.0=22_linux64_openblas
+  - libgcc-ng=14.1.0=h77fa898_0
+  - libgomp=14.1.0=h77fa898_0
   - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.27=pthreads_h413a1c8_0
-  - libsqlite=3.45.3=h2797004_0
-  - libstdcxx-ng=13.2.0=hc0a3c3a_7
+  - libsqlite=3.46.0=hde9e2c9_0
   - libuuid=2.38.1=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libzlib=1.2.13=h4ab18f5_6
+  - libzlib=1.3.1=h4ab18f5_1
   - ncurses=6.5=h59595ed_0
-  - numpy=1.26.4=py311h64a7726_0
-  - openssl=3.3.0=h4ab18f5_3
+  - openssl=3.3.1=h4ab18f5_1
   - pip=24.0=pyhd8ed1ab_0
-  - python=3.11.9=hb806964_0_cpython
-  - python_abi=3.11=4_cp311
+  - python=3.11.0=he550d4f_1_cpython
   - readline=8.2=h8228510_1
-  - setuptools=70.0.0=pyhd8ed1ab_0
+  - setuptools=70.1.1=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - tzdata=2024a=h0c530f3_0
   - wheel=0.43.0=pyhd8ed1ab_1
   - xz=5.2.6=h166bdaf_0
   - pip:
-      - certifi==2024.2.2
-      - charset-normalizer==3.3.2
       - fair-esm==2.0.0
-      - filelock==3.14.0
-      - fsspec==2024.5.0
-      - huggingface-hub==0.23.2
-      - idna==3.7
+      - filelock==3.15.4
+      - fsspec==2024.6.1
       - jinja2==3.1.4
       - markupsafe==2.1.5
       - mpmath==1.3.0
       - networkx==3.3
+      - numpy==1.25.2
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvrtc-cu12==12.1.105
@@ -64,18 +48,8 @@ dependencies:
       - nvidia-nccl-cu12==2.20.5
       - nvidia-nvjitlink-cu12==12.5.40
       - nvidia-nvtx-cu12==12.1.105
-      - packaging==24.0
-      - pyyaml==6.0.1
-      - regex==2024.5.15
-      - requests==2.32.3
-      - safetensors==0.4.3
-      - scipy==1.13.1
-      - sentencepiece==0.2.0
+      - scipy==1.11.1
       - sympy==1.12.1
-      - tokenizers==0.19.1
-      - torch==2.3.0
-      - tqdm==4.66.4
-      - transformers==4.41.1
-      - triton==2.3.0
-      - typing-extensions==4.12.0
-      - urllib3==2.2.1
+      - torch==2.0.1
+      - triton==2.3.1
+      - typing-extensions==4.12.2
