--- a/env.yml
+++ b/env.yml
@@ -8,19 +8,29 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - bzip2=1.0.8=hd590300_5
   - ca-certificates=2024.6.2=hbcca054_0
-  - faiss-cpu=1.8.0
+  - faiss=1.7.4=py311h26a440e_0_cpu
   - ld_impl_linux-64=2.40=hf3520f5_7
+  - libblas=3.9.0=22_linux64_openblas
+  - libcblas=3.9.0=22_linux64_openblas
+  - libfaiss=1.7.4=hf47d654_0_cpu
+  - libfaiss-avx2=1.7.4=h1234567_0_cpu
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=14.1.0=h77fa898_0
+  - libgfortran-ng=14.1.0=h69a702a_0
+  - libgfortran5=14.1.0=hc5f4f2c_0
   - libgomp=14.1.0=h77fa898_0
+  - liblapack=3.9.0=22_linux64_openblas
   - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.27=pthreads_h413a1c8_0
   - libsqlite=3.46.0=hde9e2c9_0
+  - libstdcxx-ng=14.1.0=hc0a3c3a_0
   - libuuid=2.38.1=h0b41bf4_0
   - libzlib=1.3.1=h4ab18f5_1
   - ncurses=6.5=h59595ed_0
   - openssl=3.3.1=h4ab18f5_1
   - pip=24.0=pyhd8ed1ab_0
   - python=3.11.0=he550d4f_1_cpython
+  - python_abi=3.11=4_cp311
   - readline=8.2=h8228510_1
   - setuptools=70.1.1=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
@@ -35,7 +45,7 @@ dependencies:
       - markupsafe==2.1.5
       - mpmath==1.3.0
       - networkx==3.3
-      - numpy==1.25.2
+      - numpy==1.25.0
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvrtc-cu12==12.1.105
@@ -46,10 +56,10 @@ dependencies:
       - nvidia-cusolver-cu12==11.4.5.107
       - nvidia-cusparse-cu12==12.1.0.106
       - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.5.40
+      - nvidia-nvjitlink-cu12==12.5.82
       - nvidia-nvtx-cu12==12.1.105
-      - scipy==1.11.1
+      - scipy==1.14.0
       - sympy==1.12.1
-      - torch==2.0.1
+      - torch==2.3.1
       - triton==2.3.1
       - typing-extensions==4.12.2
